--- a/index.html
+++ b/index.html
@@ -3,75 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <title> Easy Java Code </title>
-    <link href="layout-styles.css" rel="stylesheet" />
+    <link href="css/global.css" rel="stylesheet" />
+    <link href="css/home_page_table.css" rel="stylesheet" />
 </head>
 
 <body>
-<style type="text/css">
-        .tg {
-            border-collapse: collapse;
-            border-spacing: 0;
-            border-color: #ccc;
-            font-family: Consolas;
-        }
-
-            .tg td {
-                font-size: 16px;
-                padding: 10px 10px;
-                border-style: solid;
-                border-width: 1px;
-                overflow: hidden;
-                word-break: normal;
-                border-color: #ccc;
-                color: #333;
-                background-color: #fff;
-            }
-
-            .tg th {
-                font-size: 16px;
-                font-weight: normal;
-                padding: 10px 10px;
-                border-style: solid;
-                border-width: 1px;
-                overflow: hidden;
-                word-break: normal;
-                border-color: #ccc;
-                color: #333;
-                background-color: #f0f0f0;
-            }
-
-            .tg .module {
-                font-size: 24px;
-                border-color: inherit;
-                text-align: left;
-                vertical-align: top;
-                background-color: #fed8b1;
-            }
-
-            .tg .topic_title {
-                width: 25%;
-                border-color: inherit;
-                font-size: 20px;
-                text-align: left;
-                vertical-align: top;
-                width: 350px;
-            }
-
-            .tg .topic_desc {
-                width: 70%;
-                border-color: inherit;
-                text-align: left;
-                vertical-align: top;
-            }
-
-
-            .tg .topic_level {
-                width: 5%;
-                border-color: inherit;
-                text-align: left;
-                vertical-align: top;
-            }
-    </style>
 
 <p></p>
 <table class="tg" align="center" width="90%">
