--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <table class="tg" align="center" width="90%">
 
     <tr>
-        <th class="module" colspan="3">INTRODUCTION</th>
+        <th class="module" colspan="3">INTRODUCTION!</th>
     </tr>
 
     <tr>
