--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </tr>
 
     <tr>
-        <td class="topic_title"> Hello World! program </td>
+        <td class="topic_title_disabled"> Hello World! program </td>
         <td class="topic_desc"> First sample program. </td>
         <td class="topic_level"> REQUIRED </td>
     </tr>
