--- a/modules/intro/whatisjava.html
+++ b/modules/intro/whatisjava.html
@@ -8,7 +8,17 @@
 
 <body>
 
+
 hi there, this is what is java page
+
+
+<pre>
+public class Main {
+    public static void main(String[] args) {
+        System.out.println("This will be printed");
+    }
+}
+</pre>
 
 </body>
 </html>
