experimenting with new code lines

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 <table class="tg" align="center" width="90%">
 
     <tr>
-        <th class="module" colspan="2"> INTRODUCTION </th>
+        <th class="module" colspan="2"> Introduction </th>
     </tr>
 
     <tr>
         <td class="topic_title"> <a href="modules/intro/whatisjava.html"> What is Java? </a> </td>
-        <td class="topic_desc"> brief intro to Java </td>
+        <td class="topic_desc"> Brief into to the Java programming language. </td>
     </tr>
 
     <tr>
-        <td class="topic_title"> Hello World! program </td>
-        <td class="topic_desc"> First sample program. </td>
+        <td class="topic_title"> <a href="modules/intro/helloworld.html"> Hello World! example </a> </td>
+        <td class="topic_desc"> First example program to get started. </td>
     </tr>
 
     <tr>
@@ -61,26 +61,26 @@
     </tr>
 
     <tr>
-        <th class="module" colspan="2">COMMENTS</th>
+        <th class="module" colspan="2"> Comments </th>
     </tr>
 
     <tr>
-        <td class="topic_title">What are Comments?</td>
+        <td class="topic_title_disabled">What are Comments?</td>
         <td class="topic_desc">Overview of comments.</td>
     </tr>
 
     <tr>
-        <td class="topic_title">Single line comments</td>
+        <td class="topic_title_disabled">Single line comments</td>
         <td class="topic_desc"> jksfadfjsf </td>
     </tr>
 
     <tr>
-        <td class="topic_title">Multi-line comments</td>
+        <td class="topic_title_disabled">Multi-line comments</td>
         <td class="topic_desc"> there are times when multi line </td>
     </tr>
 
     <tr>
-        <th class="module" colspan="2"> VARIABLES </th>
+        <th class="module" colspan="2"> Variables </th>
     </tr>
 
     <tr>
