--- a/modules/intro/whatisjava.html
+++ b/modules/intro/whatisjava.html
@@ -4,21 +4,12 @@
     <meta charset="utf-8" />
     <title> Easy Java Code </title>
     <link href="../../css/global.css" rel="stylesheet" />
+    <link href="../../css/page.css" rel="stylesheet" />
 </head>
 
 <body>
 
-
-hi there, this is what is java page
-
-
-<pre>
-public class Main {
-    public static void main(String[] args) {
-        System.out.println("This will be printed");
-    }
-}
-</pre>
+<h2> What is Java? </h2>
 
 </body>
 </html>
