changed code lines

--- a/modules/intro/helloworld.html
+++ b/modules/intro/helloworld.html
@@ -16,13 +16,12 @@
     to concern yourself with the strange Java code lines.
 </p>
 
-
 <pre>
-<span>public class Main {</span>
-<span>    public static void main(String[] args) {</span>
-<span>        System.out.println("Hello World!  This is my first program.");  <syntax class="comment"> // Note that this is an important paragraph. :)</syntax> </span>
-<span>    }</span>
-<span>}</span>
+<code>public class Main </code>
+<code>    public static void main(String[] args) {</code>
+<code>       System.out.println("Hello World!  This is my first program.");</code>
+<code>    }</code>
+<code>}</code>
 </pre>
 
 <p> line 2: Ignore the <i> <b>public static void main</b></i>. </p>
