--- a/modules/intro/helloworld.html
+++ b/modules/intro/helloworld.html
@@ -12,20 +12,14 @@
 <p class="title"> Hello World! </p>
 
 <p>
-    In most tutorials the first program prints out the words "Hello World".  Below is a simple program printing out "Hello World!  This is my first program".   At this time you don't need
-    to concern yourself with the strange Java code lines.
+    Most training tutorials illustrate the first example using the <b> Hello World! </b> program.  These is the first
+    program for a newbie because it is easy to write and execute.
 </p>
 
-<pre>
-<code>public class Main </code>
-<code>    public static void main(String[] args) {</code>
-<code>       System.out.println("Hello World!  This is my first program.");</code>
-<code>    }</code>
-<code>}</code>
-</pre>
+<p>
+    <img alt="first image" src="codeimage01.PNG">
+</p>
 
-<p> line 2: Ignore the <i> <b>public static void main</b></i>. </p>
-<p> line 3: <i> <b>System.out.println</b> </i> allows something to printed on the console. </p>
 
 </body>
 </html>
