--- a/index.html
+++ b/index.html
@@ -113,6 +113,25 @@
         <td class="topic_desc"> All about Char. </td>
     </tr>
 
+    <tr>
+        <th class="module" colspan="2"> Methods </th>
+    </tr>
+
+    <tr>
+        <td class="topic_title"> <a href="modules/methods/whatisamethod.html"> What is a method? </a></td>
+        <td class="topic_desc"> Often the building block of code, a method is bundled code which executes when called. </td>
+    </tr>
+
+    <tr>
+        <td class="topic_title"> <a href="modules/methods/stringmethods.html"> String methods </a></td>
+        <td class="topic_desc"> Popular String methods </td>
+    </tr>
+
+    <tr>
+        <td class="topic_title"> <a href="modules/methods/intanddoublemethods.html"> int and double methods </a></td>
+        <td class="topic_desc"> Popular integer and double methods </td>
+    </tr>
+
 </table>
 </body>
 </html>
