added empty new index

--- a/index.html
+++ b/index.html
@@ -8,130 +8,6 @@
 </head>
 
 <body>
-
-<p></p>
-<table class="tg" align="center" width="90%">
-
-    <tr>
-        <th class="module" colspan="2"> Introduction </th>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> <a href="modules/intro/whatisjava.html"> What is Java? </a> </td>
-        <td class="topic_desc"> Brief into to the Java programming language. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> <a href="modules/intro/helloworld.html"> Hello World! example </a> </td>
-        <td class="topic_desc"> First example program to get started. </td>
-    </tr>
-
-    <tr>
-        <th class="module" colspan="2"> IDE (Integrated Development Environment) & Overview </th>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Why an IDE? </td>
-        <td class="topic_desc"> Brief explanation here </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Installation of IntelliJ </td>
-        <td class="topic_desc"> here </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Overview of IntelliJ </td>
-        <td class="topic_desc"> Understand basic IntelliJ navigation menus, etc,.. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Create First Project </td>
-        <td class="topic_desc"> Open IntelliJ and go through steps of creating first project </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Packages </td>
-        <td class="topic_desc"> All about packages </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled"> Creating Java Classes (programs) </td>
-        <td class="topic_desc"> All about creating tests </td>
-    </tr>
-
-    <tr>
-        <th class="module" colspan="2"> Comments </th>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled">What are Comments?</td>
-        <td class="topic_desc">Overview of comments.</td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled">Single line comments</td>
-        <td class="topic_desc"> jksfadfjsf </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title_disabled">Multi-line comments</td>
-        <td class="topic_desc"> there are times when multi line </td>
-    </tr>
-
-    <tr>
-        <th class="module" colspan="2"> Variables </th>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> What are Variables? </td>
-        <td class="topic_desc"> A variable is a container which holds the value while the Java program is executed. A variable is assigned with a data type. Variable is a name of memory location. There are three types of variables in java: local, instance and static.</td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> String </td>
-        <td class="topic_desc"> All about Strings. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> Integer </td>
-        <td class="topic_desc"> All about Integer. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> Double </td>
-        <td class="topic_desc"> All about Double. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> Boolean </td>
-        <td class="topic_desc"> All about Boolean. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> Char </td>
-        <td class="topic_desc"> All about Char. </td>
-    </tr>
-
-    <tr>
-        <th class="module" colspan="2"> Methods </th>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> <a href="modules/methods/whatisamethod.html"> What is a method? </a></td>
-        <td class="topic_desc"> Often the building block of code, a method is bundled code which executes when called. </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> <a href="modules/methods/stringmethods.html"> String methods </a></td>
-        <td class="topic_desc"> Popular String methods </td>
-    </tr>
-
-    <tr>
-        <td class="topic_title"> <a href="modules/methods/intanddoublemethods.html"> int and double methods </a></td>
-        <td class="topic_desc"> Popular integer and double methods </td>
-    </tr>
-
-</table>
+test
 </body>
 </html>
