--- a/index.html
+++ b/index.html
@@ -12,45 +12,43 @@
 <div class="container">
     <nav class="menu">
         <ul>
-            <input type="radio" name="menu" id="archive" checked>
+            <input type="radio" name="menu" id="welcome" checked>
             <li>
-                <label for="archive" class="title"><i class="fa fa-folder"></i>Archive</label>
-                <a href="#">New File</a>
-                <a href="#">Open File</a>
-                <a href="#">Save As...</a>
-                <a href="#">Exit</a>
+                <label for="welcome" class="title"></i> Welcome </label>
+                <a href="#"> About </a>
+                <a href="#"> Course Overview </a>
+                <a href="#"> Prerequisites </a>
             </li>
-            <input type="radio" name="menu" id="edit">
+
+            <input type="radio" name="menu" id="installation">
             <li>
-                <label for="edit" class="title"><i class="fa fa-edit"></i>Edit</label>
-                <a href="#">Copy</a>
-                <a href="#">Cut</a>
-                <a href="#">Paste</a>
-                <a href="#">Undo</a>
+                <label for="installation" class="title"></i> Installation </label>
+                <a href="#"> What is IntelliJ? </a>
+                <a href="#"> Prerequisites to Installation </a>
+                <a href="#"> Java JDK </a>
+                <a href="#"> Installation of IntelliJ </a>
             </li>
-            <input type="radio" name="menu" id="tools">
+
+            <input type="radio" name="menu" id="basicsyntax">
             <li>
-                <label for="tools" class="title"><i class="fa fa-gavel"></i>Tools</label>
-                <a href="#">Build</a>
-                <a href="#">Macros</a>
-                <a href="#">Command</a>
-                <a href="#">Snippets</a>
+                <label for="basicsyntax" class="title"></i> Basic Syntax </label>
+                <a href="#"> Create a New Project </a>
+                <a href="#"> Hello World program </a>
+                <a href="#"> main() method</a>
+                <a href="#"> System.out.println() </a>
             </li>
-            <input type="radio" name="menu" id="preferences">
+
+            <input type="radio" name="menu" id="comments">
             <li>
-                <label for="preferences" class="title"><i class="fa fa-gears"></i>Preferences</label>
-                <a href="#">Browser</a>
-                <a href="#">Settings</a>
-                <a href="#">Packages</a>
-                <a href="#">Theme</a>
+                <label for="comments" class="title"></i> Comments </label>
+                <a href="#"> Different types of Commenting </a>
+                <a href="#"> Exercises / Demo </a>
             </li>
         </ul>
     </nav>
     <main class="main">
         <h1>This is a vertical accordion menu only HTML and CSS</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum itaque quae eos natus est asperiores consectetur sit, deserunt saepe totam tenetur numquam dicta harum distinctio accusamus, sed minima reiciendis expedita in. Sint, numquam recusandae id repellendus delectus porro, ipsa a harum obcaecati blanditiis cum accusantium optio voluptate dicta voluptatum. Ipsa nobis aliquid accusantium illum aliquam impedit! Sunt est aliquid ipsam sequi vel repudiandae minima alias earum facere nisi nostrum voluptatum tenetur, iusto illo harum aliquam reprehenderit porro molestias quas possimus voluptatem, doloribus, maiores ea ullam. Sint accusamus vel adipisci delectus nesciunt inventore, exercitationem saepe nulla, dignissimos cum amet consectetur odit voluptas. Laudantium corrupti modi laboriosam aspernatur sed veniam alias hic distinctio, fuga ullam incidunt blanditiis magnam recusandae numquam neque amet enim ratione! Qui numquam obcaecati quas nobis neque. Magni, autem, optio. Esse iste aut quam corrupti qui laboriosam molestias quisquam totam, non consequuntur mollitia maiores itaque et amet nisi voluptatem voluptatum sed dolorem, expedita nam aliquam. Voluptatum quisquam odio ea ullam esse exercitationem ipsum recusandae. Numquam recusandae ex ullam at nobis soluta voluptatum! Ipsum et, ipsam explicabo! Aliquid beatae commodi sint voluptatibus laborum facilis vitae, quaerat, suscipit dolore deserunt alias totam eaque blanditiis rerum, dolor voluptates itaque perferendis repudiandae similique?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum itaque quae eos natus est asperiores consectetur sit, deserunt saepe totam tenetur numquam dicta harum distinctio accusamus, sed minima reiciendis expedita in. Sint, numquam recusandae id repellendus delectus porro, ipsa a harum obcaecati blanditiis cum accusantium optio voluptate dicta voluptatum. Ipsa nobis aliquid accusantium illum aliquam impedit! Sunt est aliquid ipsam sequi vel repudiandae minima alias earum facere nisi nostrum voluptatum tenetur, iusto illo harum aliquam reprehenderit porro molestias quas possimus voluptatem, doloribus, maiores ea ullam. Sint accusamus vel adipisci delectus nesciunt inventore, exercitationem saepe nulla, dignissimos cum amet consectetur odit voluptas. Laudantium corrupti modi laboriosam aspernatur sed veniam alias hic distinctio, fuga ullam incidunt blanditiis magnam recusandae numquam neque amet enim ratione! Qui numquam obcaecati quas nobis neque. Magni, autem, optio. Esse iste aut quam corrupti qui laboriosam molestias quisquam totam, non consequuntur mollitia maiores itaque et amet nisi voluptatem voluptatum sed dolorem, expedita nam aliquam. Voluptatum quisquam odio ea ullam esse exercitationem ipsum recusandae. Numquam recusandae ex ullam at nobis soluta voluptatum! Ipsum et, ipsam explicabo! Aliquid beatae commodi sint voluptatibus laborum facilis vitae, quaerat, suscipit dolore deserunt alias totam eaque blanditiis rerum, dolor voluptates itaque perferendis repudiandae similique?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum itaque quae eos natus est asperiores consectetur sit, deserunt saepe totam tenetur numquam dicta harum distinctio accusamus, sed minima reiciendis expedita in. Sint, numquam recusandae id repellendus delectus porro, ipsa a harum obcaecati blanditiis cum accusantium optio voluptate dicta voluptatum. Ipsa nobis aliquid accusantium illum aliquam impedit! Sunt est aliquid ipsam sequi vel repudiandae minima alias earum facere nisi nostrum voluptatum tenetur, iusto illo harum aliquam reprehenderit porro molestias quas possimus voluptatem, doloribus, maiores ea ullam. Sint accusamus vel adipisci delectus nesciunt inventore, exercitationem saepe nulla, dignissimos cum amet consectetur odit voluptas. Laudantium corrupti modi laboriosam aspernatur sed veniam alias hic distinctio, fuga ullam incidunt blanditiis magnam recusandae numquam neque amet enim ratione! Qui numquam obcaecati quas nobis neque. Magni, autem, optio. Esse iste aut quam corrupti qui laboriosam molestias quisquam totam, non consequuntur mollitia maiores itaque et amet nisi voluptatem voluptatum sed dolorem, expedita nam aliquam. Voluptatum quisquam odio ea ullam esse exercitationem ipsum recusandae. Numquam recusandae ex ullam at nobis soluta voluptatum! Ipsum et, ipsam explicabo! Aliquid beatae commodi sint voluptatibus laborum facilis vitae, quaerat, suscipit dolore deserunt alias totam eaque blanditiis rerum, dolor voluptates itaque perferendis repudiandae similique?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. s expedita in. Sint, numquam recusandae id repellendus delectus porro, ipsa a harum obcaecati blanditiis cum accusantium optio voluptate dicta voluptatum. Ipsa nobis aliquid accusantium illum aliquam impedit! Sunt est aliquid ipsam sequi vel repudiandae minima alias earum facere nisi nostrum voluptatum tenetur, iusto illo harum aliquam reprehenderit porro molestias quas possimus voluptatem, doloribus, maiores ea ullam. Sint accusamus vel adipisci delectus nesciunt inventore, exercitationem saepe nulla, dignissimos cum</p>
     </main>
 </div>
 
