minor changes/cleanup

--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <link href="css/global.css" rel="stylesheet" />
     <link href="css/accordian.css" rel="stylesheet" />
     <link href="css/page_layout.css" rel="stylesheet" />
-
 </head>
 
 <body>
 
 <div class="container">
 
-    <div id="header"><h2> Easy Java Code </h2> </div>
-
+    <div id="header"> </div>
     <div id="sidebar-left">
-    <nav class="menu">
         <ul>
             <input type="radio" name="menu" id="welcome" checked>
             <li>
@@ -51,7 +48,6 @@
                 <a href="#"> Exercises / Demo </a>
             </li>
         </ul>
-    </nav>
     </div>
 
     <div id="main">
