changed code image/css

--- a/modules/intro/mainmethod.html
+++ b/modules/intro/mainmethod.html
@@ -3,8 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <title> Hello World! </title>
-    <link href="../../css/global.css" rel="stylesheet" />
-    <link href="../../css/page.css" rel="stylesheet" />
     <link href="../../css/accordian.css" rel="stylesheet" />
     <link href="../../css/page_layout.css" rel="stylesheet" />
     <link href="../../css/code.css" rel="stylesheet" />
@@ -61,6 +59,11 @@
         </p>
 
 
+        <div id="codeimage">
+            <p>
+                <img alt="first image" src="codeimage02.PNG">
+            </p>
+        </div>
 
         <pre>
 <span>public class Main {</span>
