smoothed out css for code and added toggling

--- a/modules/intro/helloworld.html
+++ b/modules/intro/helloworld.html
@@ -60,19 +60,19 @@
         </p>
 
         <p>
-            <img alt="first image" src="codeimage01.PNG">
+            Discuss the main method.
         </p>
 
+        A Java method is a collection of statements that are grouped together to perform an operation. When you call the System.out.println() method, for example, the system actually executes several statements in order to display a message on the console.
 
+        <p></p>
+        Now you will learn how to create your own methods with or without return values, invoke a method with or without parameters, and apply method abstraction in the program design.
 
-        <pre>
-<span>public class Main {</span>
-<span>    public static void main(String[] args) {</span>
-<span>        System.out.println("Hello World!  This is my first program.");  <syntax class="comment"> // Note that this is an important paragraph. :)</syntax> </span>
-<span>    }</span>
-<span>}</span>
-</pre>
+        <p></p>
 
+        <div id ="codeimage">
+                <img alt="first image" src="codeimage01.PNG">
+        </div>
 
     </div>
 </div>
